test/functions/jplevyak/zeroarity-bound-error-2.chpl
class C {
  def f { return 1; }
  def g() { return 2; }
  
}

var c = new C();

writeln(c.f());

